framec_tests/common/tests/negative/test_unterminated_ts_template_literal.frm
@target typescript

system TsUnterminatedTemplate {
  actions:
    doThing() {
      const name = "world";
      // Unterminated template literal below (missing closing backtick)
      const msg = `hello ${name;
    }

  interface:
  machine:
    $S {
      e -> $S
    }
  domain:
}

